# gamutin

./: .gitignore  README.md  pyproject.toml
dev/: icobuild.py
gamutin/: __init__.py  __main__.py  c.py  cfg.py
gamutin/cli/: interface.py
gamutin/core/: blending.py  cfg.py  colorspaces.py  gamut.py  grading.py  mathing.py  utils.py
gamutin/core/color/: __init__.py  colordepth.py  lchabcolor.py  rgbcolor.py  xyzcolor.py
gamutin/core/colorspaces/: __init__.py  base.py  categories.py  datasets.py  transformations.py
gamutin/core/io/: __init__.py  c.py  reading.py  representing.py  validating.py
gamutin/editor/: cfg.py  exceptions.py  main.py  options.py  testing.py  utils.py
gamutin/editor/assets/: __init__.py
gamutin/editor/dialogs/: about.py  issue.py
gamutin/editor/resources/: __init__.py  colors.py
gamutin/editor/widgets/: __init__.py  badge.py  colorspaceselector.py  context.py  dicttreeview.py  errorhandler.py  icons.py  imagerepr.py  imageselector.py  main.py  pathselector.py
pgcheck/: __init__.py  __main__.py  c.py
pgcheck/cli/: interface.py
pgcheck/core/: blending.py  colorspaces.py  exceptions.py  gamut.py  io.py  pointergamut.py  utils.py
pgcheck/core/io/: __init__.py  reading.py  writing.py
pgcheck/editor/: __init__.py  cfg.py  main.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/core/: test_blending.py  test_colorspaces.py  test_gamut.py  test_io.py  test_mathing.py  test_pointergamut.py  test_utils.py
tests/data/: color_bars_alpha.tif  spac-o-ween.5DmarkII.0001.exr  test_data_generator.nk  wheel_mchannel.exr
(+117 files in other folders)
