[tool.poetry]
name = "gamutin"
version = "0.1.0"
description = "Color-science utility to check gamut footprint of an image. As CLI and GUI."
authors = ["Liam Collod <lcollod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
click = "8.1.*"
colour = { git = "https://github.com/colour-science/colour.git", tag = "v0.4.1" }
openimageio = { path = "./vendor/OpenImageIO-2.2.18.0-cp39-cp39-win_amd64.whl" }
PySide2 = "5.15.2.1"
python = ">=3.9,<3.11"
"Qt.py" = { path = "./vendor/Qt.py" }
xmltodict = "^0.13"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
Pillow = "*"
ruff = "*"

[tool.ruff]
exclude = [
    "vendor"
]
ignore = ["F401"]
[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
